1.优化i18n；2.增加功能：1）左侧增加`工作区`，点击后可以显示已启用的工作区，点击工作区显示已启用的场景清单、skill清单。2）Skills列表增加工作区筛选；3）`比对`增加工作区的比对方式。
